se actualiza estilos miniproyecto salvimar

--- a/curso_definitivo_html/responsive_design/proyecto_response.html
+++ b/curso_definitivo_html/responsive_design/proyecto_response.html
@@ -5,20 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./proyecto_response.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Salvimar</title>
 </head>
 <body>
     <div class="container">
         <header class="header">
             <div class="header_data">
-                <img src="" alt="imagen">
-                <span>nombre</span>
+                <img class="logo" src="./img/logosalvimar.png" alt="imagen">
+                <img class="menu"src="./img/icons8-menú-redondeado-50.png" alt="menu">
+
             </div>
         </header>
         <main class="main">
-            <div class="main_resena">reseña</div>
+            <div class="main_resena">
+                <h1 class="main_resena main_resena--h1">Salvimar Colombia</h1>
+                <p class="main_resena main_resena--p">Comercializadora de equipos deportivos, contamos con alta variedad en productos dedicados a la pesca con arpón y pesca deportiva.</p>
+            </div>
             <div class="products">
-                <div class="products_list">arpones
+                <div class="products_list">
+                    <span class="products_list--name">arpones</span>
                     <div class="products_desc">
                         <div class="product_desc--num">produc1</div>
                         <div class="product_desc--num">produc2</div>
