--- a/curso_definitivo_html/responsive_design/proyecto_response.html
+++ b/curso_definitivo_html/responsive_design/proyecto_response.html
@@ -28,19 +28,30 @@
                 <div class="products_list">
                     <span class="products_list--name">arpones</span>
                     <div class="products_desc">
-                        <div class="product_desc--num">produc1</div>
-                        <div class="product_desc--num">produc2</div>
-                        <div class="product_desc--num">produc3</div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">HERO ROLLER</span>
+                            <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">HERO ROLLER</span>
+                            <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">HERO ROLLER</span>
+                            <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
+                        </div>
                     </div>
                 </div>
-                <div class="products_list">arpones
+                <div class="products_list">
+                    <span class="products_list--name">caretas</span>
                     <div class="products_desc">
                         <div class="product_desc--num">produc1</div>
                         <div class="product_desc--num">produc2</div>
                         <div class="product_desc--num">produc3</div>
                     </div>
                 </div>
-                <div class="products_list">arpones
+                <div class="products_list">
+                    <span class="products_list--name">vestidos</span>
                     <div class="products_desc">
                         <div class="product_desc--num">produc1</div>
                         <div class="product_desc--num">produc2</div>
