ajustes a proyectos salvimar

--- a/curso_definitivo_html/responsive_design/proyecto_response.html
+++ b/curso_definitivo_html/responsive_design/proyecto_response.html
@@ -33,37 +33,61 @@
                             <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
                         </div>
                         <div class="product_desc--num">
-                            <span class="products_desc--text">HERO ROLLER</span>
-                            <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
+                            <span class="products_desc--text">HERO STRONG</span>
+                            <img class="products_desc--img" src="./img/img-333-hero.jpg" alt="hero_roller">
                         </div>
                         <div class="product_desc--num">
-                            <span class="products_desc--text">HERO ROLLER</span>
-                            <img class="products_desc--img" src="./img/img-369-hr.jpg" alt="hero_roller">
+                            <span class="products_desc--text">TOMAHAWK</span>
+                            <img class="products_desc--img" src="./img/img-398-tomahok.jpg" alt="hero_roller">
                         </div>
                     </div>
                 </div>
                 <div class="products_list">
                     <span class="products_list--name">caretas</span>
                     <div class="products_desc">
-                        <div class="product_desc--num">produc1</div>
-                        <div class="product_desc--num">produc2</div>
-                        <div class="product_desc--num">produc3</div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">SET MORPHEUS</span>
+                            <img class="products_desc--img" src="./img/img-549-mor.jpg" alt="mospheus">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">SET CORAL</span>
+                            <img class="products_desc--img" src="./img/img-550-coral.jpg" alt="coral">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">COMBO SET RAY</span>
+                            <img class="products_desc--img" src="./img/img-551-ray.jpg" alt="ray">
+                        </div>
                     </div>
                 </div>
                 <div class="products_list">
                     <span class="products_list--name">vestidos</span>
                     <div class="products_desc">
-                        <div class="product_desc--num">produc1</div>
-                        <div class="product_desc--num">produc2</div>
-                        <div class="product_desc--num">produc3</div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">RECORD MAN</span>
+                            <img class="products_desc--img" src="./img/img-350-man.jpg" alt="man">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">SET CORAL</span>
+                            <img class="products_desc--img" src="./img/img-366-women.jpg" alt="women">
+                        </div>
+                        <div class="product_desc--num">
+                            <span class="products_desc--text">TOMAHAWK</span>
+                            <img class="products_desc--img" src="./img/img-421-P1swin.jpg" alt="swing">
+                        </div>
                     </div>
                 </div>    
             </div>
 
         </main>
         <footer class="footer">
-            <div class="footer_data">contacto</div>
-            <div class="footer_data">redes</div>
+            <div class="footer_data--text">
+                <span>dirección: Calle17#3-64,La Dorada,Colombia</span>
+                <span>telefono: 321 3185353</span>
+            </div>
+            <div class="footer_data">
+                <img class="footer_data--logos" src="./img/icons8-facebook-48.png" alt="face_book">
+                <img class="footer_data--logos" src="./img/icons8-instagram-48.png" alt="instagram">
+            </div>
         </footer>
     </div>
 </body>
